--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div id="work" class="work">
         <h2>My work</h2>
         <p>My Desingner web projects</p>
-        <button class="btn3">web projects</button>
+        <button class="btn3">Web projects</button>
     </div>
     <div id="contact" class="contact">
         <h2>contact me</h2>
